--- a/18_insertion_methods.html
+++ b/18_insertion_methods.html
@@ -37,6 +37,9 @@
         divTwo.prepend(paraTwo);
         divTwo.before(paraOne);
         divTwo.after(paraFour);
+
+
+        // divTwo.remove(paraFour)
     </script>
 </body>
 
